recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:5: error: ';' expected but '(' found.
	avance(100);
              ^